--- a/04_ElementsOfDeepLearning/cartpole_dqn_img.ipynb
+++ b/04_ElementsOfDeepLearning/cartpole_dqn_img.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "239a9237",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
@@ -32,11 +28,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "03e8e7b9",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ReplayMemory(object):\n",
@@ -203,11 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2cd19bb2",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "env = gym.make('CartPole-v1', render_mode=\"rgb_array\")\n",
@@ -311,8 +299,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
