Fixed issue with graph plot

--- a/04_ElementsOfDeepLearning/cartpole_dqn_img.ipynb
+++ b/04_ElementsOfDeepLearning/cartpole_dqn_img.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "1424af4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For tips on running notebooks in Google Colab, see\n",
+    "# https://docs.pytorch.org/tutorials/beginner/colab\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "239a9237",
    "metadata": {},
    "outputs": [],
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "03e8e7b9",
    "metadata": {},
    "outputs": [],
@@ -51,11 +63,11 @@
     "\n",
     "    def __init__(self, h, w, outputs):\n",
     "        super(DQN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=5, stride=2)\n",
     "        self.bn1 = nn.BatchNorm2d(16)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=5, stride=2)\n",
     "        self.bn2 = nn.BatchNorm2d(32)\n",
-    "        self.conv3 = nn.Conv2d(32, 32, kernel_size=5, stride=2)\n",
+    "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=32, kernel_size=5, stride=2)\n",
     "        self.bn3 = nn.BatchNorm2d(32)\n",
     "\n",
     "        # Number of Linear input connections depends on output of conv2d layers\n",
@@ -125,7 +137,7 @@
     "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
     "\n",
     "\n",
-    "def plot_durations():\n",
+    "def plot_durations(show_result=False):\n",
     "    plt.figure(2)\n",
     "    plt.clf()\n",
     "    durations_t = torch.tensor(episode_durations, dtype=torch.float)\n",
@@ -141,7 +153,8 @@
     "\n",
     "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
     "    if is_ipython:\n",
-    "        display.clear_output(wait=True)\n",
+    "        if not show_result:\n",
+    "            display.clear_output(wait=True)\n",
     "        display.display(plt.gcf())\n",
     "\n",
     "\n",
@@ -196,7 +209,17 @@
    "execution_count": null,
    "id": "2cd19bb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "env = gym.make('CartPole-v1', render_mode=\"rgb_array\")\n",
     "\n",
@@ -293,6 +316,7 @@
     "print('Complete')\n",
     "env.render()\n",
     "env.close()\n",
+    "plot_durations(show_result=True)\n",
     "plt.ioff()\n",
     "plt.show()"
    ]
